Added the export donors list button and created API route (#32)
* Fixes #15 Added a button to export donors list as CSV

* Fixed #15 Added button to download donors list as CSV

* Fixed #15 Changed to download only the selected year.

* Fixed #15 Handling invalid requests

* Spacing

--- a/redirectioneaza/templates/ngo/donations-view.html
+++ b/redirectioneaza/templates/ngo/donations-view.html
@@ -7,7 +7,7 @@
     {% for key, value in donors.items() %}
 
         {% if value or key == current_year %}
-            <p>{{ key }}</p>
+            <p>{{ key }} • <a class="btn btn-default btn-xs" href="{{url_for('get-donors-list',year=key)}}">Export CSV</a></p>
             <table class="table">
                 <thead>
                     <tr>
