--- a/redirectioneaza/templates/header.html
+++ b/redirectioneaza/templates/header.html
@@ -22,16 +22,16 @@
                 <li><a href="/login">Log In</a></li>
             </ul>
         </div>
-        <div id="sponsor-container">
+        {# <div id="sponsor-container">
             <a href="http://www.patriabank.ro" target="_blank">
                 <img src="images/logo-patria-bank.png">
             </a>
-        </div>
-        <div id="creator-container">
+        </div> #}
+        {# <div id="creator-container">
             <p>Aplicație realizată de</p>
             <a href="https://code4.ro/" target="_blank">
                 <img src="images/code4-header-logo.png">
             </a>
-        </div>
+        </div> #}
     </div>
 </nav>
