Manually merged e220af799eb26869f16eec4c61f95b32ac31cc3d into this branch

--- a/redirectioneaza/templates/index.html
+++ b/redirectioneaza/templates/index.html
@@ -15,7 +15,7 @@
             Redirecționează 2% din impozit <br>
             către ONG-urile în care crezi.
         </h1>
-        <h4>Mai ai timp până pe <strong class="deadline">15 martie</strong>.</h4>
+        <h4>Mai ai timp până pe <strong class="deadline">{{ limit.day }} {{ months[limit.month] }}</strong>.</h4>
 
         <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1 search-bar-container">
