--- a/redirectioneaza/templates/succes.html
+++ b/redirectioneaza/templates/succes.html
@@ -74,7 +74,7 @@
                 </ol>
             </div>
             <div class="col-xs-12 col-md-8 col-md-offset-2 margin-top text-center">
-                <h4>Trimite pana la data de <strong class="deadline">15 martie</strong>!</h4>
+                <h4>Trimite pana la data de <strong class="deadline">{{ limit.day }} {{ months[limit.month] }}</strong>!</h4>
             </div>
         </div>
 
