--- a/redirectioneaza/templates/ngo/account-header.html
+++ b/redirectioneaza/templates/ngo/account-header.html
@@ -7,7 +7,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">redirectioneaza 2%</a>
+            <a class="navbar-brand" href="/">
+                <img src="images/logoSmaller.png" alt="Redirectioneaza logo" width="90px;">
+            </a>
         </div>
 
         <div id="account-header-container" class="collapse navbar-collapse">
@@ -15,13 +17,6 @@
                 <li><a href="/contul-meu">Acasa</a></li>
                 <li><a href="/asociatia">Date asociatie</a></li>
                 <li><a href="/date-cont">Date cont</a></li>
-                <!-- <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Donatii <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/donatii/doilasuta">2%</a></li>
-                        <li><a href="#" class="disabled">Donatii in bani</a></li>
-                    </ul>
-                </li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/logout">Iesi din cont</a></li>
