--- a/redirectioneaza/templates/ngo/my-account.html
+++ b/redirectioneaza/templates/ngo/my-account.html
@@ -26,7 +26,7 @@
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <div class="alert alert-dismissible alert-info">
                         <button type="button" class="close" data-dismiss="alert">×</button>
-                        <strong>Nota!</strong> Formularul de redirectionare a 2% din impozitul anual poate fi completat de cei care viziteaza pagina asociatiei, doar intre 1 Ianuarie si 15 martie ale anului curent.
+                        <strong>Nota!</strong> Formularul de redirectionare a 2% din impozitul anual poate fi completat de cei care viziteaza pagina asociatiei, doar intre 1 Ianuarie si {{ limit.day }} {{ months[limit.month] }} ale anului curent.
                     </div>
                 </div>
             </div>
