--- a/redirectioneaza/templates/twopercent.html
+++ b/redirectioneaza/templates/twopercent.html
@@ -209,7 +209,7 @@
         <div class="row text-center">
             <div id="donations-closed-alert" class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <div class="alert alert-info">
-                    <strong>Notă!</strong> Formularul de donație poate fi completat doar între <span>1 Ianuarie</span> și <span>15 martie</span> ale anului curent.
+                    <strong>Notă!</strong> Formularul de donație poate fi completat doar între <span>1 Ianuarie</span> și <span>{{ limit.day }} {{ months[limit.month] }}</span> ale anului curent.
                 </div>
             </div>
         </div>
